fix: droid agent TTY and output parsing issues
- Wrap droid command with `script` to provide pseudo-TTY (fixes "raw mode
  is not supported" error when Ink initializes without TTY)
- Fix argument ordering so `exec` subcommand comes before flags
- Add `cd` prefix to shell command to respect working directory
- Add ANSI stripping and JSON extraction for cleaner output parsing
- Filter user/input events from droid JSONL output
- Pass agentPlugin prop through RunAppWrapper to RunApp so parser
  correctly detects droid agent
- Add setAgentPlugin method to StreamingOutputParser for dynamic updates

--- a/website/content/docs/plugins/agents/droid.mdx
+++ b/website/content/docs/plugins/agents/droid.mdx
@@ -126,16 +126,17 @@ Only enable skip permissions for trusted tasks. The agent will run without inter
 Ralph TUI builds a command similar to:
 
 ```bash
-droid --print -p "<prompt>" \
+droid exec \
   --model claude-opus-4-5-20251101 \
   --reasoning-effort high \
   --skip-permissions-unsafe \
   --output-format stream-json \
-  --cwd /path/to/project
+  --cwd /path/to/project \
+  "<prompt>"
 ```
 
 Key behaviors:
-1. **Non-interactive mode**: `--print` passes the prompt
+1. **Non-interactive mode**: Uses `droid exec` subcommand with prompt as argument
 2. **Tracing**: `--output-format stream-json` when tracing is enabled
 3. **Working directory**: `--cwd` set to the current task workspace
 
